--- a/personal-portfolio-tutorial/package.json
+++ b/personal-portfolio-tutorial/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "express-cors": "^0.0.3",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
@@ -18,6 +20,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
+    "server": "^1.0.37",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
