--- a/personal-portfolio-tutorial/package.json
+++ b/personal-portfolio-tutorial/package.json
@@ -19,6 +19,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "server": "^1.0.37",
     "web-vitals": "^2.1.4"
@@ -49,7 +50,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
